...
    onEmailChange: (String) -> Unit,
    onPasswordChange: (String) -> Unit,
    onLoginClick : () -> Unit,
    onForgotPasswordClick : () -> Unit,
    snackBarMessageShown : () -> Unit,
    loadingContent: @Composable () -> Unit = {
        LoaderScreen(modifier = Modifier.fillMaxSize().background(Dark))
    },
    snackBarHostState: SnackbarHostState
) {

    LaunchedEffect(uiState.isLogin) {
        if (uiState.isLogin) {
...

        Spacer(modifier = Modifier.height(8.dp))

        Text(
            text = stringResource(R.string.forgot_password),
            color = BlueAccent,
            modifier = Modifier.testTag("ForgotButton")
                .align(Alignment.End)
                .clickable { onForgotPasswordClick() }
        )
        Spacer(modifier = Modifier.height(32.dp))

        AuthCinemaxButton(
...
